fix: print pdf